# slurk-chat-bot-setup-desciol

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  build_all_wheels.sh  docker-compose-debug.yaml  docker-compose.yaml  pyproject.toml  rebuild_and_restart.sh  workspace.toml
bases/slurk_setup_descil/chatbot_api/: __init__.py  core.py
bases/slurk_setup_descil/concierge_plus_api/: __init__.py  core.py
bases/slurk_setup_descil/managerbot_api/: __init__.py  core.py
bases/slurk_setup_descil/setup_client/: __init__.py  core.py
bases/slurk_setup_descil/setup_client_api/: core.py
bases/slurk_setup_descil/setup_service_api/: __init__.py  core.py
components/slurk_setup_descil/chatbot/: __init__.py  chatbot.py  config.py  core.py  gpt_bot.py  interaction.py  polybox_prompt.py  prompt_from_external_api.py  prompti.py  templates.py  vars.py
components/slurk_setup_descil/concierge_plus/: __init__.py  core.py
components/slurk_setup_descil/managerbot/: __init__.py  core.py
components/slurk_setup_descil/setup_client/: __init__.py
components/slurk_setup_descil/setup_service/: __init__.py  core.py
components/slurk_setup_descil/slurk_api/: __init__.py  core.py
projects/chatbot/: Dockerfile  pyproject.toml
projects/concierge_plus/: Dockerfile  pyproject.toml
projects/managerbot/: Dockerfile  pyproject.toml
projects/setup_client/: Dockerfile  pyproject.toml
projects/setup_service/: Dockerfile  pyproject.toml
projects/slurk/: .gitlab-ci.yml  Dockerfile
projects/slurk/docs/: Makefile  conf.py  slurk_api.rst  slurk_deployment.rst  slurk_multibots.rst
projects/slurk/examples/: enforce-fullscreen_layout.json
projects/slurk/slurk/: __init__.py
projects/slurk/slurk/extensions/: api.py  database.py  openvidu.py
projects/slurk/slurk/models/: common.py  layout.py  log.py  permissions.py  room.py  task.py  token.py  user.py
projects/slurk/slurk/views/: __init__.py
projects/slurk/slurk/views/api/: __init__.py  auth.py  layouts.py  logs.py  permissions.py  rooms.py  tasks.py  tokens.py  users.py
projects/slurk/slurk/views/chat/: __init__.py  events.py
projects/slurk/slurk/views/login/: __init__.py  (+2 more)
projects/slurk/tests/: conftest.py
projects/slurk/tests/api/: test_layouts.py  test_logs.py  test_openvidu.py  test_permissions.py  test_rooms.py  test_tasks.py  test_tokens.py  test_users.py
test/bases/slurk_setup_descil/setup_client/: test_core.py
test/bases/slurk_setup_descil/setup_service/: test_core.py
test/components/slurk-setup-descil/slurk_api/: test_core.py
test/components/slurk_setup_descil/chatbot/: test_core.py
test/components/slurk_setup_descil/concierge_plus/: test_core.py
test/components/slurk_setup_descil/setup_client/: test_core.py
test/components/slurk_setup_descil/setup_service/: test_core.py
(+11 files in other folders)
