[tool.poetry]
name = "slurk-chat-bot-setup-descil"
version = "0.1.0"
description = ""
authors = ["Uwe Schmitt <uwe.schmitt@id.ethz.ch>"]
readme = "README.md"

packages = [
  {include = "slurk_setup_descil/slurk_api", from = "components"},
  {include = "slurk_setup_descil/setup_service", from = "bases"},
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
aiohttp = "^3.9.5"
socketio = "^0.2.1"
python-socketio = {extras = ["asyncio-client"], version = "^5.11.3"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
isort = "^5.13.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
